--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,6 @@ matplotlib
 Pillow
 opencv-python-headless
 scikit-image
-tensorflow==2.9.1
 scikit-learn
-protobuf==3.20.*   # Prevents TensorFlow conflicts
+tensorflow==2.9.1
+protobuf~=3.19.0  # Prevents TensorFlow conflicts
